--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,20 +1,11 @@
-<div class="d-flex flex-column flex-md-row align-items-center p-3 px-
-md-4 mb-3 bg-white border-bottom shadow-sm">
-
-<h5 class="my-0 mr-md-auto font-weight-
-normal">Employee Management</h5>
-
-<nav class="my-2 my-md-0 mr-md-3">
-
-<a class="btn btn-outline-
-primary" routerLinkActive="active" routerLink="/create-
-employee">Create Employee</a>
-
-</nav>
-
-<a class="btn btn-outline-
-primary" routerLinkActive="active" routerLink="/employees-
-list">Employees List</a>
-
+<div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
+    <h3 class="my-0 mr-md-auto font-weight-normal">Employee Records Update Manager</h3>
+    <nav class="my-2 my-md-0 mr-md-3">
+        <a class="btn btn-outline-primary" routerLinkActive="active" routerLink="/create-employee">
+            Create Record
+        </a>
+    </nav>
+    <a class="btn btn-outline-primary" routerLinkActive="active" routerLink="/employees-list">
+        Records List
+    </a>
 </div>
-<router-outlet></router-outlet>
